--- a/component/banner/css/Banner.module.css
+++ b/component/banner/css/Banner.module.css
@@ -2,4 +2,49 @@
     height: 90vh;
     display: flex;
     align-items: center;
+
+}
+
+.subcontainer{
+    width: 50%;
+    margin: auto;
+    z-index: 1;
+}
+
+.h1Style{
+    color: white;
+    font-size: 4em;
+    font-weight: bolder;
+    letter-spacing: 0.03em;
+    background: linear-gradient(to right,#cecec1,rgb(19, 18, 18));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-shadow: 9px -3px 45px rgb(255, 255, 255,0.2);
+    font-family: 'Helvetica';
+}
+
+.imghedron{
+    color: transparent;
+    position: absolute;
+    top: 50%;
+    left: 23%;
+    background-color: transparent;
+    filter: brightness(70%);
+    width: 10%;
+    z-index: 0;
+    opacity: 0.7;
+    object-fit: cover;
+}
+
+.imghedron2{
+    color: transparent;
+    position: absolute;
+    top: 50%;
+    right: 10%;
+    background-color: transparent;
+    filter: brightness(100%);
+    width: 20%;
+    z-index: 0;
+    opacity: 0.9;
+    object-fit: cover;
 }
