--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,11 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-
-body{
+html, body {  
+    margin:0px;  
+    height:100%;  
     background-color: #f1f1f1;
     z-index: -1;
-}
+}  
+
 
 @font-face {
     font-family: 'Helvetica';
