--- a/component/ConnectSection/css/Connect.module.css
+++ b/component/ConnectSection/css/Connect.module.css
@@ -35,3 +35,9 @@
 .descriptionblock{
     display: block;
 }
+
+.appserviceassets{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+   color: white;
+   font-size: 1.2em;
+}
